ingress/ingress-controller/Bare-metal/ingress-with-MetalLB/ingress-path-based-routing/apache-httpd-deployment-killercoda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deployment-01-httpd
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-deployment-01-httpd
  template:
    metadata:
      labels:
        app: main-deployment-01-httpd
    spec:
      containers:
        - name: main-deployment-01-httpd-container
          image: httpd:2.4  # Official Apache HTTPD image
          ports:
            - containerPort: 80
