ingress/ingress-controller/Bare-metal/ingress-with-MetalLB/ingress-path-based-routing/ingress-nginx-controller-service-killercoda.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  loadBalancerIP: 172.30.2.101  # Ensure it falls within MetalLB’s assigned range. We are using the first IP in the range . . . 
  selector:                                      # Remember this selector . . . .
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
