ingress/ingress-controller/Bare-metal/ingress-with-MetalLB/ingress-path-based-routing/ingress-nginx_and_http-path-based-routing-controller-resource-rules-01.yaml
#apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-httpd-resource-01
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
# If you want to add information for other humans about 
# a given resource, then annotations are a better choice.
# For example, adding pager information of the responsible 
# person, the link of a knowledge base article, etc.
spec:
  rules:
  - host: main.example.com
# Define here a host base routing
# any request to access main.example.com
# will be routed to the services below
# depending of the path prefix
    http:
      paths:
        - path: /nginx
# Define here a path base routing
# any request to access main.example.com/nginx
# will be routed to the service: main-deployment-01-nginx
# below.
          backend:
            serviceName: main-deployment-01-nginx
            servicePort: 80 
# This port 80 is the one we used during 
# the kubectl expose command

        - path: /httpd
# Define here a path base routing
# any request to access main.example.com/httpd
# will be routed to the service: main-deployment-01-httpd
# below.
          backend:
            serviceName: main-deployment-01-httpd
            servicePort: 80 
# This port 80 is the one we used during 
# the kubectl expose command
